--- a/Ml_project.ipynb
+++ b/Ml_project.ipynb
@@ -1304,24 +1304,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "para_rfc = {\n",
-    "    'n_estimators': [10,50,100,200,500],\n",
-    "    'criterion': ['gini', 'entropy'],\n",
-    "    'max_depth': [2,3,4,5,6,7,8,10,12],\n",
-    "    'alpha': [0.0001, 0.05],\n",
-    "    'max_features': ['auto','sqrt','log2'],\n",
-    "}\n",
-    "rfc_gscv = GridSearchCV(rfc, para_rfc, n_jobs=-1, cv=3)\n",
-    "rfc_gscv.fit(X_train, y_train)\n",
-    "print('Best parameters found:\\n', rfc_gscv.best_params_)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 31,
    "metadata": {},
    "outputs": [
@@ -1569,7 +1551,16 @@
    "cell_type": "code",
    "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best parameters found:\n",
+      " {'activation': 'relu', 'alpha': 0.0001, 'hidden_layer_sizes': (100,), 'learning_rate': 'constant', 'solver': 'adam'}\n"
+     ]
+    }
+   ],
    "source": [
     "params = {\n",
     "        'learning_rate':[0.001,0.01,0.02,0.05,0.1,0.5,1],\n",
@@ -1587,14 +1578,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8514492753623188\n"
+      "0.8731884057971014\n"
      ]
     }
    ],
