--- a/Ml_project.ipynb
+++ b/Ml_project.ipynb
@@ -1573,7 +1573,7 @@
     "        }\n",
     "model_3_bestpara = GridSearchCV(model_3, params, n_jobs=-1, cv=3)\n",
     "model_3_bestpara.fit(X_train, y_train)\n",
-    "print('Best parameters found:\\n', clf.best_params_)"
+    "print('Best parameters found:\\n', model_3_bestpara.best_params_)"
    ]
   },
   {
